--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
+    "package": "npm run build; docker build -t workout-timer:latest .",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
